force-app/main/default/objects/Expense_Limit_Master__mdt/Expense_Limit_Master__mdt.object-meta.xml
<CustomObject>
    <label>Expense Limit Master</label>
    <pluralLabel>Expense Limit Masters</pluralLabel>
</CustomObject>