force-app/main/default/objects/Expense_Limit_Master__mdt/fields/District_In_charge_Daily_KM_Limit__c.field-meta.xml
<CustomField>
    <fullName>District_In_charge_Daily_KM_Limit__c</fullName>
    <label>District In-charge Daily KM Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>