force-app/main/default/objects/Expense_Limit_Master__mdt/fields/HQ_DA__c.field-meta.xml
<CustomField>
    <fullName>HQ_DA__c</fullName>
    <label>HQ DA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>