force-app/main/default/objects/Expense_Limit_Master__mdt/fields/HQ_Travel_Mode__c.field-meta.xml
<CustomField>
    <fullName>HQ_Travel_Mode__c</fullName>
    <label>HQ Travel Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>