force-app/main/default/objects/Expense_Limit_Master__mdt/fields/Local_Conveyance__c.field-meta.xml
<CustomField>
    <fullName>Local_Conveyance__c</fullName>
    <label>Local Conveyance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>