force-app/main/default/objects/Expense_Limit_Master__mdt/fields/Lodging_Expense__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Expense__c</fullName>
    <label>Lodging Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>