force-app/main/default/objects/Expense_Limit_Master__mdt/fields/Up__c.field-meta.xml
<CustomField>
    <fullName>Up__c</fullName>
    <label>Upcountry Travel Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>